# meme_bot

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  FINAL_VERIFICATION.md  FRONTEND.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  TRADING_BOT.md  config.example.env  config.py  discord_bot.py  example.py  go.mod  go.sum  main.py  meme_generator.py  requirements.txt  setup.sh  telegram_bot.py  test_structure.py
cmd/discord/: main.go
cmd/server/: main.go
cmd/telegram/: main.go
cmd/trading/: main.go
frontend/: Cargo.toml  app.js  index.html  styles.css
frontend/src/: main.rs
internal/config/: config.go
meme_templates/: README.md
pkg/agents/execution/: execution.go
pkg/agents/listing/: listing.go
pkg/agents/offchain/: offchain.go
pkg/agents/prefilter/: prefilter.go
pkg/agents/risk/: risk.go
pkg/agents/safety/: safety.go
pkg/agents/scanner/: scanner.go
pkg/agents/strategy/: strategy.go
pkg/agents/telemetry/: telemetry.go
pkg/config/: config.go  config_test.go
pkg/meme/: generator.go
pkg/models/: events.go
pkg/orchestrator/: orchestrator.go
