[package]
name = "meme-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "FormData", "File", "FileList", "Blob", "BlobPropertyBag", "Response", "Window", "Document", "HtmlSelectElement", "Url"] }
js-sys = "0.3"
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
